objects/Meta_Setting__mdt.object
<CustomObject   >
    <fields>
        <fullName>Text_2__c</fullName>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_3__c</fullName>
        <label>Text 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meta Setting</label>
    <pluralLabel>Meta Settings</pluralLabel>
</CustomObject>